[FIX] UI - Alignment of left navbar on the fund tab

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -2076,6 +2076,8 @@ html.t-trade header nav ul > li.active#nav-advanced > a:after {
 }
 
 #t-fund, #t-trust {
+  padding: 0px 26px;
+
   .currencies a {
     display: block;
     padding: 10px;
